# ResearchTeamAgents

./: README.md  pyproject.toml  report.txt  requirements.txt
kyc_ia/: crew.py  main.py
kyc_ia/config/: agents.yaml
kyc_ia/tools/: custom_tool.py
